# mds

./: README.md
fabric-samples/config/: core.yaml
fabric-samples/mds/api/go/: accesscgo.hpp  go.mod  producecgo.hpp  zkapi.go
fabric-samples/mds/application-go/hospital/: go.sum  hospital.go
fabric-samples/mds/application-go/patient/: go.mod  patient.go  registerUser.js
fabric-samples/mds/chaincode-go/mdmanage/: go.mod  go.sum  mdmanage.go
fabric-samples/mds/chaincode-go/pdmanage/: collections_config.json  go.sum  pdmanage.go
fabric-samples/mds/mydocker/: Dockerfile  core.yaml
fabric-samples/mds/mydocker/config/: chaincode.env  connection.json  mdmanage-external.tgz  metadata.json
fabric-samples/mds/mydocker/prfKey/: updatevk.raw
fabric-samples/mds/util/go/: application-assert.go  encrypt.go
fabric-samples/mds/util/go/goEncrypt/: ecccrypt.go  eccsign.go  utils.go
fabric-samples/test-network/: network.sh
fabric-samples/test-network/configtx/: configtx.yaml
fabric-samples/test-network/docker/: docker-compose-ca.yaml  docker-compose-test-net.yaml
fabric-samples/test-network/organizations/fabric-ca/: registerEnroll.sh
fabric-samples/test-network/organizations/fabric-ca/org3/: fabric-ca-server-config.yaml
fabric-samples/test-network/scripts/: createChannel1.sh
libsnark/src/: CMakeLists.txt
libsnark/src/access/: accesscgo.cpp  accesscgo.hpp  getpvk.cpp  main.cpp
libsnark/src/access/circuit/: gadget.tcc
libsnark/src/produce/: getpvk.cpp  main.cpp  producecgo.cpp  producecgo.hpp
libsnark/src/produce/circuit/: commitment.tcc  gadget.tcc
libsnark/src/share/: getpvk.cpp  main.cpp  sharecgo.cpp  sharecgo.hpp
libsnark/src/share/circuit/: gadget.tcc
libsnark/src/update/: getpvk.cpp  main.cpp  updatecgo.cpp  updatecgo.hpp
libsnark/src/update/circuit/: gadget.tcc
mds/api/go/: updatecgo.hpp  zkapi.go
mds/application-go/hospital/: enrollAdmin.js  go.mod  hospital.go  registerUser.js
mds/application-go/patient/: enrollAdmin.js  patient.go
mds/chaincode-go/pdmanage/: go.mod  pdmanage.go
mds/util/go/: go.mod
